-feature#4825: Add update_device.php script to cli folder
-feature#4827: Move all Help pages to docs.cacti.net if the page is reachable
-feature#4832: Show PHP INI locations during install
-feature#4833: Detect PHP INI values that are different in the INI vs running config
-feature#4870: Add gradient support for AREA charts
-feature#4872: Add missing and more recent CDEF functions for RRDtool

1.2.21
-issue#4531: Correct duplicate keys within database
-issue#4614: Add support for hooks during polling loop or at poller end
-issue#4683: When adding a device, errors may be reported whilst updating templates
-issue#4684: When creating RRD error image, font may not exist by xmacan
-issue#4685: Correct issues with corrupted Cacti Packages
-issue#4687: Poller output not empty all the time
-issue#4688: When running under PHP 5.4, certain operators are not valid by ddb4github
-issue#4689: Package Import generates errors when you try to import directory or non-file
-issue#4693: Correct issues with Heartbeat definitions under PHP 8.x
-issue#4695: When importing packages, hash types are not properly processed by ddb4github
-issue#4697: Login problem
-issue#4698: When creating a device, unexpected poller down message may be shown
-issue#4701: Editing a new user or user group may cause errors
-issue#4705: Unable to automatically login using Remember Me option
-issue#4707: Unable to duplicate graph templates due to missing column
-issue#4716: Correct issues with Data Source Edit under PHP 8.x
-issue#4719: Browsers may reject CactiTimeZone and CactiDateTime cookies due to SameSite requirements
-issue#4721: Some JavaScript and image files URL are broken under midwinter theme by ddb4github
-issue#4722: When upgrading from pre 1.x, various errors may be seen by ddb4github
-issue#4726: When running under Fedora, issues may be seen with snmp values
-issue#4729: Add ability for Template and Package Installs to update Suggested Name Values/Patterns